fix focus contrast of will's contact links

--- a/tbx/static_src/sass/components/_contact-slim.scss
+++ b/tbx/static_src/sass/components/_contact-slim.scss
@@ -71,7 +71,7 @@
 
         &:hover,
         &:focus {
-            color: var(--color--coral);
+            color: var(--color--coral-dark);
         }
     }
 
